# ds-tool-discovery-agent

./: .gitignore  README.md  package.json  pyproject.toml  start_agent.bat
src/: config.py  models.py  ranking.py
src/agent/: crawl_all.py  run_forever.py
src/mcp/: server.py
src/sources/: github.py  pypi.py
