[project]
name = "ds-tool-discovery-agent"
version = "0.1.0"
requires-python = ">=3.10"
description = "AI agent that discovers and ranks data science tools"

[project.dependencies]
httpx = "^0.27.0"
pydantic = "^2.9.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"

[tool.setuptools]
packages = ["src"]
